Fix: safari fixed z-index, search auto scroll

--- a/src/app/front/+home/home.component.scss
+++ b/src/app/front/+home/home.component.scss
@@ -58,13 +58,15 @@
       top: 260px;
       left: 0;
       right: 0;
+      
       z-index: 2;
+      
       width: 80%;
       max-width: 500px;
       margin-right: auto;
       margin-left: auto;
       &.search-fixed {
-        z-index: 3;
+        z-index: initial;
         .search-box {
           position: fixed;
           top: 1.7%;
@@ -72,6 +74,7 @@
           margin: 0px;
           left: initial;
           width: 37%;
+          z-index: 1030;
           @media (max-width: 768px) {
             left: 0;
             right: 0;
