--- a/src/app/front/components/navbar/navbar.component.scss
+++ b/src/app/front/components/navbar/navbar.component.scss
@@ -1,6 +1,5 @@
 @import '../../../shared/styles/variables';
 .navbar {
-	z-index: 3;
 	background-color: $primaryColor;
 	border-bottom: none;
 	height: 60px;
